# QuantX-AI

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secret.baseline  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs-validation.yml
.kilo/plans/: 1782236671409-documentation-roadmap.md  1782541833679-enterprise-architecture-vision-plan.md  1782542107623-enterprise-architecture-final-refinement.md  1782546655477-mds-governance-extension.md  QX-000A-master-development-specification-plan.md  QX-001A-enterprise-architecture-vision-revision.md  QX-002A-backend-implementation-plan.md  QX-003A-frontend-implementation-plan.md  QX-004A-infrastructure-implementation-plan.md
api/: openapi.yaml
api/contracts/: README.md
api/examples/: README.md
api/schemas/: README.md
apps/quantx-platform/: .eslintrc.js  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  README.md  SECURITY.md  jest.config.js  package.json  tsconfig.json
apps/quantx-web/: .eslintrc.js  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
backend/: Dockerfile  alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/src/quantx/: cache.py  config.py  database.py  di.py  exceptions.py  logging.py  main.py  observability.py
backend/src/quantx/application/: README.md
backend/src/quantx/config/: README.md  __init__.py  base.py  development.py  production.py  testing.py
backend/src/quantx/domain/: README.md
backend/src/quantx/health/: routes.py
backend/src/quantx/infrastructure/: README.md
backend/src/quantx/middleware/: request_id.py  security.py
backend/src/quantx/presentation/: README.md
backend/src/quantx/shared/: README.md
backend/tests/unit/: test_health.py
bot/: Dockerfile  pyproject.toml
bot/src/bot/: config.py  dispatcher.py  main.py
bot/src/bot/filters/: README.md
bot/src/bot/handlers/: README.md
bot/src/bot/keyboards/: README.md
bot/src/bot/middlewares/: README.md  logging.py
bot/src/bot/routers/: README.md  common.py
bot/src/bot/services/: README.md
bot/src/bot/states/: README.md
bot/src/bot/utils/: README.md
bot/tests/: conftest.py
docs/: 01_PROJECT_OVERVIEW.md  02_SYSTEM_ARCHITECTURE.md  03_ARCHITECTURE_DECISION_RECORDS.md  04_TECH_STACK.md  05_DOMAIN_MODEL.md  06_CLEAN_ARCHITECTURE.md  07_SERVICE_BOUNDARIES.md  08_DATABASE_DESIGN.md  09_DATABASE_SCHEMA.md  10_ENTITY_RELATIONSHIP.md  11_API_SPECIFICATION.md  12_API_CONTRACTS.md  13_AUTHENTICATION.md  14_AUTHORIZATION.md  15_SECURITY.md  16_RISK_MANAGEMENT.md  17_AI_ARCHITECTURE.md  18_AI_PIPELINE.md  19_EXCHANGE_INTEGRATION.md  20_TELEGRAM_ARCHITECTURE.md  21_FRONTEND_ARCHITECTURE.md  22_BACKEND_ARCHITECTURE.md  23_BACKGROUND_WORKERS.md  24_MESSAGE_QUEUE.md  25_CACHE_STRATEGY.md  26_EVENT_SYSTEM.md  27_CONFIGURATION.md  28_DEPENDENCY_INJECTION.md  29_LOGGING.md  30_MONITORING.md  31_OBSERVABILITY.md  32_ERROR_HANDLING.md  33_VALIDATION.md  34_TESTING.md  35_PERFORMANCE.md  36_SCALABILITY.md  37_DEPLOYMENT.md  38_DOCKER.md  39_KUBERNETES.md  40_CI_CD.md  (+27 more)
engineering/: enterprise-architecture-vision.md  master-development-specification.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  (+1 more)
scripts/: bootstrap.py  check_dependencies.py  check_links.py  check_metadata.py  check_source_of_truth.py  dev.py  format.py  healthcheck.py  lint.py  reset_db.py  validate_docs.py
shared/: pyproject.toml
shared/python/shared/: __init__.py  config.py  constants.py  errors.py  events.py  kernel.py  types.py
shared/python/shared/constants/: README.md  __init__.py
shared/python/shared/core/: README.md  __init__.py  config.py  events.py  kernel.py
shared/python/shared/exceptions/: README.md  __init__.py
shared/python/shared/types/: README.md  __init__.py
shared/python/shared/utils/: README.md
shared/python/shared/validators/: README.md
tests/: conftest.py  pytest.ini
worker/: Dockerfile  pyproject.toml
worker/src/worker/: config.py  main.py
worker/src/worker/queues/: README.md
worker/src/worker/schedules/: README.md
worker/src/worker/services/: README.md
worker/src/worker/tasks/: README.md
worker/src/worker/utils/: README.md
worker/tests/: conftest.py
(+59 files in other folders)
