[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantx-ai"
version = "0.1.0"
description = "QuantX AI - Algorithmic Trading Platform"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
    { name = "QuantX AI Team", email = "team@quantx.ai" },
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/quantx", "bot/src/bot", "worker/src/worker", "shared/python/shared"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests", "bot/tests", "worker/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend/src", "bot/src", "worker/src", "shared/python"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
skip_covered = false
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP", "B", "SIM"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["backend", "bot", "worker", "shared"]

[tool.hatch.envs.default]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "dependency-injector>=4.41.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "aiogram>=3.0.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.0.0",
    "hypothesis>=6.92.0",
]

[tool.hatch.envs.lint]
dependencies = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]
