[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantx-backend"
description = "QuantX AI Backend Service"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "dependency-injector>=4.41.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantx"]
