[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantx-bot"
description = "QuantX AI Telegram Bot Service"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
