[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantx-shared"
description = "QuantX AI Shared Libraries"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/shared"]
