[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantx-worker"
description = "QuantX AI Background Worker Service"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
